# oxide-update-engine

./: AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.md  release.toml
.cargo/: config.toml
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
crates/oxide-update-engine/: Cargo.toml  README.md
crates/oxide-update-engine-display/: Cargo.toml  README.md
crates/oxide-update-engine-display/examples/basic/: display.rs  main.rs  spec.rs
crates/oxide-update-engine-display/src/: group_display.rs  lib.rs  line_display.rs  line_display_shared.rs  utils.rs
crates/oxide-update-engine-test-utils/: Cargo.toml  README.md
crates/oxide-update-engine-test-utils/src/: lib.rs
crates/oxide-update-engine-types/: Cargo.toml  README.md
crates/oxide-update-engine-types/src/: buffer.rs  errors.rs  events.rs  lib.rs  macros.rs  schema.rs  spec.rs
crates/oxide-update-engine-types/src/buffer/: imp.rs  mod.rs  reasons.rs  summary.rs
crates/oxide-update-engine-types/tests/: buffer.rs
crates/oxide-update-engine-types/tests/output/: event_report_generic_spec_schema.json
crates/oxide-update-engine/src/: context.rs  engine.rs  errors.rs  lib.rs  macros.rs
e2e-example/: Cargo.toml  README.md
e2e-example/src/: app.rs  display.rs  lib.rs  main.rs  spec.rs
typify-example/: Cargo.toml  README.md
typify-example/src/: lib.rs
typify-example/tests/output/: event_report_typify.rs  external_spec_typify.rs
