[workspace]
resolver = "3"
members = [
    "crates/*",
]

[workspace.package]
edition = "2024"
license = "MPL-2.0"
rust-version = "1.85"
repository = "https://github.com/oxidecomputer/oxide-update-engine"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(doc_cfg)"] }

[workspace.dependencies]
anyhow = "1"
buf-list = "1"
bytes = "1"
camino = { version = "1", features = ["serde1"] }
camino-tempfile = "1"
cancel-safe-futures = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
debug-ignore = "1"
derive-where = "1"
either = "1"
futures = "0.3"
indent_write = "2"
indexmap = { version = "2", features = ["serde"] }
indicatif = "0.17"
indoc = "2"
libsw = { version = "3.5.0", features = ["tokio"] }
linear-map = "1"
newtype-uuid = { version = "1.3", features = ["v4", "serde"] }
oxide-update-engine = { version = "0.1.0", path = "crates/oxide-update-engine" }
oxide-update-engine-display = { version = "0.1.0", path = "crates/oxide-update-engine-display" }
oxide-update-engine-test-utils = { version = "0.1.0", path = "crates/oxide-update-engine-test-utils" }
oxide-update-engine-types = { version = "0.1.0", path = "crates/oxide-update-engine-types" }
owo-colors = "4"
petgraph = { version = "0.8", default-features = false, features = ["graphmap", "std"] }
schemars = { version = "0.8", features = ["uuid1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
slog = "2"
slog-async = "2"
slog-term = "2"
supports-color = "3"
swrite = "0.1"
tokio = { version = "1", features = ["macros", "sync", "time", "rt-multi-thread"] }
tokio-stream = "0.1"
unicode-width = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
