[package]
name = "typify-example"
version = "0.0.0"
edition.workspace = true
publish = false

[dev-dependencies]
anyhow.workspace = true
expectorate.workspace = true
oxide-update-engine-types = { workspace = true, features = ["schemars08"] }
prettyplease.workspace = true
schemars.workspace = true
serde_json.workspace = true
syn.workspace = true
typify.workspace = true

[package.metadata.release]
release = false
