[package]
name = "oxide-update-engine-test-utils"
version = "0.1.0"
publish = false
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
futures.workspace = true
oxide-update-engine.workspace = true
oxide-update-engine-types.workspace = true
serde_json.workspace = true
slog.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
