[package]
name = "oxide-update-engine"
version = "0.1.0"
description = "A framework for declaring and executing sequential update steps with serializable event streams."
repository.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg=doc_cfg"]

[lints]
workspace = true

[features]
schemars08 = ["oxide-update-engine-types/schemars08"]

[dependencies]
anyhow.workspace = true
cancel-safe-futures.workspace = true
debug-ignore.workspace = true
derive-where.workspace = true
futures.workspace = true
linear-map.workspace = true
oxide-update-engine-types.workspace = true
serde_json.workspace = true
slog.workspace = true
tokio.workspace = true

[package.metadata.cargo-sync-rdme.badge.badges]
license = true
crates-io = true
docs-rs = true
rust-version = true

[package.metadata.release]
pre-release-replacements = [
    { file = "src/lib.rs", search = "^#!\\[doc\\(html_root_url = \"https://docs.rs/oxide-update-engine/.*\"\\)\\]$", replace = "#![doc(html_root_url = \"https://docs.rs/oxide-update-engine/{{version}}\")]", exactly = 1 },
]

[dev-dependencies]
anyhow.workspace = true
oxide-update-engine-test-utils.workspace = true
oxide-update-engine-types.workspace = true
slog.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-stream.workspace = true
